y.output
Grammar

    0 $accept: prog $end

    1 prog: extern_print extern_read func_def

    2 extern_read: EXTERN INT READ '(' ')' ';'

    3 extern_print: EXTERN VOID PRINT '(' INT ')' ';'

    4 func_def: INT ID '(' ')' block_stmt
    5         | INT ID '(' INT ID ')' block_stmt

    6 block_stmt: '{' var_decls stmts '}'
    7           | '{' stmts '}'

    8 var_decls: var_decls decl
    9          | decl

   10 decl: INT ID ';'

   11 stmts: stmts stmt
   12      | stmt

   13 stmt: ID '=' expr ';'
   14     | block_stmt
   15     | WHILE '(' cond ')' stmt
   16     | IF '(' cond ')' stmt ELSE stmt
   17     | IF '(' cond ')' stmt
   18     | PRINT '(' term ')' ';'
   19     | RETURN '(' expr ')' ';'
   20     | RETURN expr ';'

   21 cond: term GT term
   22     | term LT term
   23     | term EQ term
   24     | term GE term
   25     | term LE term
   26     | term NEQ term

   27 expr: term '+' term
   28     | term '-' term
   29     | term '*' term
   30     | term '/' term
   31     | term
   32     | READ '(' ')'

   33 term: NUM
   34     | ID
   35     | '-' term


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 2 3 4 5 15 16 17 18 19 32
    ')' (41) 2 3 4 5 15 16 17 18 19 32
    '*' (42) 29
    '+' (43) 27
    '-' (45) 28 35
    '/' (47) 30
    ';' (59) 2 3 10 13 18 19 20
    '=' (61) 13
    '{' (123) 6 7
    '}' (125) 6 7
    error (256)
    NUM <ival> (258) 33
    ID <idname> (259) 4 5 10 13 34
    INT (260) 2 3 4 5 10
    VOID (261) 3
    PRINT (262) 3 18
    READ (263) 2 32
    WHILE (264) 15
    IF (265) 16 17
    ELSE (266) 16
    EXTERN (267) 2 3
    RETURN (268) 19 20
    EQ (269) 23
    GT (270) 21
    LT (271) 22
    GE (272) 24
    LE (273) 25
    NEQ (274) 26
    NOELSE (275)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    prog <nptr> (32)
        on left: 1
        on right: 0
    extern_read <nptr> (33)
        on left: 2
        on right: 1
    extern_print <nptr> (34)
        on left: 3
        on right: 1
    func_def <nptr> (35)
        on left: 4 5
        on right: 1
    block_stmt <nptr> (36)
        on left: 6 7
        on right: 4 5 14
    var_decls <svec_ptr> (37)
        on left: 8 9
        on right: 6 8
    decl <nptr> (38)
        on left: 10
        on right: 8 9
    stmts <svec_ptr> (39)
        on left: 11 12
        on right: 6 7 11
    stmt <nptr> (40)
        on left: 13 14 15 16 17 18 19 20
        on right: 11 12 15 16 17
    cond <nptr> (41)
        on left: 21 22 23 24 25 26
        on right: 15 16 17
    expr <nptr> (42)
        on left: 27 28 29 30 31 32
        on right: 13 19 20
    term <nptr> (43)
        on left: 33 34 35
        on right: 18 21 22 23 24 25 26 27 28 29 30 31 35


State 0

    0 $accept: . prog $end

    EXTERN  shift, and go to state 1

    prog          go to state 2
    extern_print  go to state 3


State 1

    3 extern_print: EXTERN . VOID PRINT '(' INT ')' ';'

    VOID  shift, and go to state 4


State 2

    0 $accept: prog . $end

    $end  shift, and go to state 5


State 3

    1 prog: extern_print . extern_read func_def

    EXTERN  shift, and go to state 6

    extern_read  go to state 7


State 4

    3 extern_print: EXTERN VOID . PRINT '(' INT ')' ';'

    PRINT  shift, and go to state 8


State 5

    0 $accept: prog $end .

    $default  accept


State 6

    2 extern_read: EXTERN . INT READ '(' ')' ';'

    INT  shift, and go to state 9


State 7

    1 prog: extern_print extern_read . func_def

    INT  shift, and go to state 10

    func_def  go to state 11


State 8

    3 extern_print: EXTERN VOID PRINT . '(' INT ')' ';'

    '('  shift, and go to state 12


State 9

    2 extern_read: EXTERN INT . READ '(' ')' ';'

    READ  shift, and go to state 13


State 10

    4 func_def: INT . ID '(' ')' block_stmt
    5         | INT . ID '(' INT ID ')' block_stmt

    ID  shift, and go to state 14


State 11

    1 prog: extern_print extern_read func_def .

    $default  reduce using rule 1 (prog)


State 12

    3 extern_print: EXTERN VOID PRINT '(' . INT ')' ';'

    INT  shift, and go to state 15


State 13

    2 extern_read: EXTERN INT READ . '(' ')' ';'

    '('  shift, and go to state 16


State 14

    4 func_def: INT ID . '(' ')' block_stmt
    5         | INT ID . '(' INT ID ')' block_stmt

    '('  shift, and go to state 17


State 15

    3 extern_print: EXTERN VOID PRINT '(' INT . ')' ';'

    ')'  shift, and go to state 18


State 16

    2 extern_read: EXTERN INT READ '(' . ')' ';'

    ')'  shift, and go to state 19


State 17

    4 func_def: INT ID '(' . ')' block_stmt
    5         | INT ID '(' . INT ID ')' block_stmt

    INT  shift, and go to state 20
    ')'  shift, and go to state 21


State 18

    3 extern_print: EXTERN VOID PRINT '(' INT ')' . ';'

    ';'  shift, and go to state 22


State 19

    2 extern_read: EXTERN INT READ '(' ')' . ';'

    ';'  shift, and go to state 23


State 20

    5 func_def: INT ID '(' INT . ID ')' block_stmt

    ID  shift, and go to state 24


State 21

    4 func_def: INT ID '(' ')' . block_stmt

    '{'  shift, and go to state 25

    block_stmt  go to state 26


State 22

    3 extern_print: EXTERN VOID PRINT '(' INT ')' ';' .

    $default  reduce using rule 3 (extern_print)


State 23

    2 extern_read: EXTERN INT READ '(' ')' ';' .

    $default  reduce using rule 2 (extern_read)


State 24

    5 func_def: INT ID '(' INT ID . ')' block_stmt

    ')'  shift, and go to state 27


State 25

    6 block_stmt: '{' . var_decls stmts '}'
    7           | '{' . stmts '}'

    ID      shift, and go to state 28
    INT     shift, and go to state 29
    PRINT   shift, and go to state 30
    WHILE   shift, and go to state 31
    IF      shift, and go to state 32
    RETURN  shift, and go to state 33
    '{'     shift, and go to state 25

    block_stmt  go to state 34
    var_decls   go to state 35
    decl        go to state 36
    stmts       go to state 37
    stmt        go to state 38


State 26

    4 func_def: INT ID '(' ')' block_stmt .

    $default  reduce using rule 4 (func_def)


State 27

    5 func_def: INT ID '(' INT ID ')' . block_stmt

    '{'  shift, and go to state 25

    block_stmt  go to state 39


State 28

   13 stmt: ID . '=' expr ';'

    '='  shift, and go to state 40


State 29

   10 decl: INT . ID ';'

    ID  shift, and go to state 41


State 30

   18 stmt: PRINT . '(' term ')' ';'

    '('  shift, and go to state 42


State 31

   15 stmt: WHILE . '(' cond ')' stmt

    '('  shift, and go to state 43


State 32

   16 stmt: IF . '(' cond ')' stmt ELSE stmt
   17     | IF . '(' cond ')' stmt

    '('  shift, and go to state 44


State 33

   19 stmt: RETURN . '(' expr ')' ';'
   20     | RETURN . expr ';'

    NUM   shift, and go to state 45
    ID    shift, and go to state 46
    READ  shift, and go to state 47
    '('   shift, and go to state 48
    '-'   shift, and go to state 49

    expr  go to state 50
    term  go to state 51


State 34

   14 stmt: block_stmt .

    $default  reduce using rule 14 (stmt)


State 35

    6 block_stmt: '{' var_decls . stmts '}'
    8 var_decls: var_decls . decl

    ID      shift, and go to state 28
    INT     shift, and go to state 29
    PRINT   shift, and go to state 30
    WHILE   shift, and go to state 31
    IF      shift, and go to state 32
    RETURN  shift, and go to state 33
    '{'     shift, and go to state 25

    block_stmt  go to state 34
    decl        go to state 52
    stmts       go to state 53
    stmt        go to state 38


State 36

    9 var_decls: decl .

    $default  reduce using rule 9 (var_decls)


State 37

    7 block_stmt: '{' stmts . '}'
   11 stmts: stmts . stmt

    ID      shift, and go to state 28
    PRINT   shift, and go to state 30
    WHILE   shift, and go to state 31
    IF      shift, and go to state 32
    RETURN  shift, and go to state 33
    '{'     shift, and go to state 25
    '}'     shift, and go to state 54

    block_stmt  go to state 34
    stmt        go to state 55


State 38

   12 stmts: stmt .

    $default  reduce using rule 12 (stmts)


State 39

    5 func_def: INT ID '(' INT ID ')' block_stmt .

    $default  reduce using rule 5 (func_def)


State 40

   13 stmt: ID '=' . expr ';'

    NUM   shift, and go to state 45
    ID    shift, and go to state 46
    READ  shift, and go to state 47
    '-'   shift, and go to state 49

    expr  go to state 56
    term  go to state 51


State 41

   10 decl: INT ID . ';'

    ';'  shift, and go to state 57


State 42

   18 stmt: PRINT '(' . term ')' ';'

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    term  go to state 58


State 43

   15 stmt: WHILE '(' . cond ')' stmt

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    cond  go to state 59
    term  go to state 60


State 44

   16 stmt: IF '(' . cond ')' stmt ELSE stmt
   17     | IF '(' . cond ')' stmt

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    cond  go to state 61
    term  go to state 60


State 45

   33 term: NUM .

    $default  reduce using rule 33 (term)


State 46

   34 term: ID .

    $default  reduce using rule 34 (term)


State 47

   32 expr: READ . '(' ')'

    '('  shift, and go to state 62


State 48

   19 stmt: RETURN '(' . expr ')' ';'

    NUM   shift, and go to state 45
    ID    shift, and go to state 46
    READ  shift, and go to state 47
    '-'   shift, and go to state 49

    expr  go to state 63
    term  go to state 51


State 49

   35 term: '-' . term

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    term  go to state 64


State 50

   20 stmt: RETURN expr . ';'

    ';'  shift, and go to state 65


State 51

   27 expr: term . '+' term
   28     | term . '-' term
   29     | term . '*' term
   30     | term . '/' term
   31     | term .

    '+'  shift, and go to state 66
    '-'  shift, and go to state 67
    '*'  shift, and go to state 68
    '/'  shift, and go to state 69

    $default  reduce using rule 31 (expr)


State 52

    8 var_decls: var_decls decl .

    $default  reduce using rule 8 (var_decls)


State 53

    6 block_stmt: '{' var_decls stmts . '}'
   11 stmts: stmts . stmt

    ID      shift, and go to state 28
    PRINT   shift, and go to state 30
    WHILE   shift, and go to state 31
    IF      shift, and go to state 32
    RETURN  shift, and go to state 33
    '{'     shift, and go to state 25
    '}'     shift, and go to state 70

    block_stmt  go to state 34
    stmt        go to state 55


State 54

    7 block_stmt: '{' stmts '}' .

    $default  reduce using rule 7 (block_stmt)


State 55

   11 stmts: stmts stmt .

    $default  reduce using rule 11 (stmts)


State 56

   13 stmt: ID '=' expr . ';'

    ';'  shift, and go to state 71


State 57

   10 decl: INT ID ';' .

    $default  reduce using rule 10 (decl)


State 58

   18 stmt: PRINT '(' term . ')' ';'

    ')'  shift, and go to state 72


State 59

   15 stmt: WHILE '(' cond . ')' stmt

    ')'  shift, and go to state 73


State 60

   21 cond: term . GT term
   22     | term . LT term
   23     | term . EQ term
   24     | term . GE term
   25     | term . LE term
   26     | term . NEQ term

    EQ   shift, and go to state 74
    GT   shift, and go to state 75
    LT   shift, and go to state 76
    GE   shift, and go to state 77
    LE   shift, and go to state 78
    NEQ  shift, and go to state 79


State 61

   16 stmt: IF '(' cond . ')' stmt ELSE stmt
   17     | IF '(' cond . ')' stmt

    ')'  shift, and go to state 80


State 62

   32 expr: READ '(' . ')'

    ')'  shift, and go to state 81


State 63

   19 stmt: RETURN '(' expr . ')' ';'

    ')'  shift, and go to state 82


State 64

   35 term: '-' term .

    $default  reduce using rule 35 (term)


State 65

   20 stmt: RETURN expr ';' .

    $default  reduce using rule 20 (stmt)


State 66

   27 expr: term '+' . term

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    term  go to state 83


State 67

   28 expr: term '-' . term

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    term  go to state 84


State 68

   29 expr: term '*' . term

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    term  go to state 85


State 69

   30 expr: term '/' . term

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    term  go to state 86


State 70

    6 block_stmt: '{' var_decls stmts '}' .

    $default  reduce using rule 6 (block_stmt)


State 71

   13 stmt: ID '=' expr ';' .

    $default  reduce using rule 13 (stmt)


State 72

   18 stmt: PRINT '(' term ')' . ';'

    ';'  shift, and go to state 87


State 73

   15 stmt: WHILE '(' cond ')' . stmt

    ID      shift, and go to state 28
    PRINT   shift, and go to state 30
    WHILE   shift, and go to state 31
    IF      shift, and go to state 32
    RETURN  shift, and go to state 33
    '{'     shift, and go to state 25

    block_stmt  go to state 34
    stmt        go to state 88


State 74

   23 cond: term EQ . term

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    term  go to state 89


State 75

   21 cond: term GT . term

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    term  go to state 90


State 76

   22 cond: term LT . term

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    term  go to state 91


State 77

   24 cond: term GE . term

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    term  go to state 92


State 78

   25 cond: term LE . term

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    term  go to state 93


State 79

   26 cond: term NEQ . term

    NUM  shift, and go to state 45
    ID   shift, and go to state 46
    '-'  shift, and go to state 49

    term  go to state 94


State 80

   16 stmt: IF '(' cond ')' . stmt ELSE stmt
   17     | IF '(' cond ')' . stmt

    ID      shift, and go to state 28
    PRINT   shift, and go to state 30
    WHILE   shift, and go to state 31
    IF      shift, and go to state 32
    RETURN  shift, and go to state 33
    '{'     shift, and go to state 25

    block_stmt  go to state 34
    stmt        go to state 95


State 81

   32 expr: READ '(' ')' .

    $default  reduce using rule 32 (expr)


State 82

   19 stmt: RETURN '(' expr ')' . ';'

    ';'  shift, and go to state 96


State 83

   27 expr: term '+' term .

    $default  reduce using rule 27 (expr)


State 84

   28 expr: term '-' term .

    $default  reduce using rule 28 (expr)


State 85

   29 expr: term '*' term .

    $default  reduce using rule 29 (expr)


State 86

   30 expr: term '/' term .

    $default  reduce using rule 30 (expr)


State 87

   18 stmt: PRINT '(' term ')' ';' .

    $default  reduce using rule 18 (stmt)


State 88

   15 stmt: WHILE '(' cond ')' stmt .

    $default  reduce using rule 15 (stmt)


State 89

   23 cond: term EQ term .

    $default  reduce using rule 23 (cond)


State 90

   21 cond: term GT term .

    $default  reduce using rule 21 (cond)


State 91

   22 cond: term LT term .

    $default  reduce using rule 22 (cond)


State 92

   24 cond: term GE term .

    $default  reduce using rule 24 (cond)


State 93

   25 cond: term LE term .

    $default  reduce using rule 25 (cond)


State 94

   26 cond: term NEQ term .

    $default  reduce using rule 26 (cond)


State 95

   16 stmt: IF '(' cond ')' stmt . ELSE stmt
   17     | IF '(' cond ')' stmt .

    ELSE  shift, and go to state 97

    $default  reduce using rule 17 (stmt)


State 96

   19 stmt: RETURN '(' expr ')' ';' .

    $default  reduce using rule 19 (stmt)


State 97

   16 stmt: IF '(' cond ')' stmt ELSE . stmt

    ID      shift, and go to state 28
    PRINT   shift, and go to state 30
    WHILE   shift, and go to state 31
    IF      shift, and go to state 32
    RETURN  shift, and go to state 33
    '{'     shift, and go to state 25

    block_stmt  go to state 34
    stmt        go to state 98


State 98

   16 stmt: IF '(' cond ')' stmt ELSE stmt .

    $default  reduce using rule 16 (stmt)
